[APPDEV-3696] - Fix PMD and findbugs violations on XC
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@35091 842219ff-9341-0410-a943-573460bdd4de